syntax = "proto3";

option go_package = "./;hellopd";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc Seeya (GoodbyeRequest) returns (GoodbyeReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message GoodbyeRequest {
  string name = 1;
}

message GoodbyeReply {
  string message = 1;
}
